# agentik-core

./: Cargo.toml  README.md
crates/agentik-core/: Cargo.toml
crates/agentik-core/src/: agent.rs  agent_builder.rs  error.rs  lib.rs  memory.rs  message_ext.rs  testing.rs  toolset.rs  types.rs
crates/agentik-core/src/prompt/: context.rs
crates/agentik-core/tests/: basic_agent.rs  chf.md  import_textbook.rs  kms_agent_flow.rs
crates/llm_api/: Cargo.toml  README.md
crates/llm_api/src/: client.rs  config.rs  files.rs  lib.rs  provider.rs  streaming.rs  tokens.rs
crates/llm_api/src/http/: retry.rs  streaming.rs
crates/llm_api/src/model/: mod.rs
crates/llm_api/src/provider/: client.rs  mimo.rs  minimax.rs
crates/llm_api/src/resources/: batches.rs  files.rs  messages.rs  models.rs
crates/llm_api/src/streaming/: events.rs
crates/llm_api/tests/: custom_gateway_integration.rs  integration_tests.rs
crates/tools/: Cargo.toml
crates/tools/src/: executor.rs  function.rs  kms_tools.rs  lib.rs  lifecycle_tools.rs  registrations.rs  registry.rs  toolset.rs
src/: agent.rs  agent_builder.rs  context.rs  error.rs  lib.rs  memory.rs
src/prompt/: system_prompt_builder.rs
tests/: ahf.md  basic_agent.rs  import_textbook.rs  integration_agent.rs  kms_agent_flow.rs
