[package]
name = "tools"
version = "0.1.0"
edition = "2024"
description = "Tool execution infrastructure: registration, validation, execution, retry, and parallel dispatch."

[dependencies]
types = { version = "0.1.0", path = "../types" }
# `kms` is an optional integration. In a published release, this would be:
#   kms = { git = "https://github.com/yourorg/dendrite", tag = "vX.Y.Z", optional = true }
# For local development, we point to the sibling dendrite repo.
kms = { path = "../../../dendrite/crates/kms", optional = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
futures = { workspace = true, features = ["alloc"] }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.9.0", features = ["sqlite"] }
uuid = { version = "1.23", features = ["v4"] }

[features]
kms = ["dep:kms"]

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
