[package]
name = "tools"
version = "0.1.0"
edition = "2024"
description = "Tool execution infrastructure for the agentik-core runtime: registration, validation, execution, retry, and parallel dispatch. Contains only built-in tools (lifecycle). Domain-specific tools live in consumer crates."

[dependencies]
types = { version = "0.1.0", path = "../types" }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
futures = { workspace = true, features = ["alloc"] }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.9.0", features = ["sqlite"] }
uuid = { version = "1.23", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
